[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-supervisor"
version = "0.4.0"
description = "A Django app to manage and monitor supervisor services"
authors = [
    { name = "Author Name", email = "author@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"

# 项目依赖项
dependencies = [
    "Django>=3.0",
    "supervisor>=4.0",
    "watchdog>=2.0",

]

# 如果需要开发时依赖项（可选）
[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django",
    "black",
    "flake8",
]

[project.urls]
homepage = "https://github.com/0xP0/django-supervisor"
repository = "https://github.com/0xP0/django-supervisor"

# 如果需要指定额外的元数据（可选）
[project.scripts]
django-supervisor = "django_supervisor.manage:main"

